Added GC settings